# safebond

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
ai/: README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  chat.py  conversation.py  emotion.py  health.py  memory.py  profile.py  safety.py
backend/app/core/: __init__.py  cache.py  config.py  exceptions.py  logging.py  middleware.py  runtime.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  conversation.py  emergency_contact.py  memory_chunk.py  message.py  user.py  user_profile.py
backend/app/integrations/: __init__.py  chroma.py  huggingface_emotion.py  huggingface_safety.py  sentence_transformer_embeddings.py
backend/app/repositories/: conversation.py  memory.py  message.py  profile.py  user.py
backend/app/schemas/: analytics.py  auth.py  chat.py  common.py  conversation.py  emotion.py  health.py  memory.py  profile.py  safety.py  user.py
backend/app/services/: __init__.py  analytics.py  auth.py  chat.py  emotion.py  health.py  memory.py  profile.py  rag.py  safety.py  safety_middleware.py
backend/tests/: test_emotion_service.py  test_health.py  test_memory_service.py  test_safety_service.py
docs/: architecture.md  backend-foundation.md  emotion-detection.md  integration-flow.md  memory-rag.md  repo-structure.md  safety-risk.md  troubleshooting.md
(+45 files in other folders)
