[project]
name = "safebond-backend"
version = "0.1.0"
description = "FastAPI backend for Safebond"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib>=1.7.4",
  "sqlalchemy>=2.0.32",
  "greenlet>=3.0.3",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "chromadb>=0.5.5",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "email-validator>=2.2.0",
  "python-json-logger>=2.0.7",
  "transformers>=4.44.0",
  "torch>=2.4.0",
  "sentence-transformers>=3.0.1",
  "accelerate>=0.34.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
